# ai-projects-portfolio

./: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: agent.py  embeddings.py  health.py  rag.py  text_to_image.py  tool_agent.py
backend/app/middleware/: error_handler.py
backend/app/models/: schemas.py
backend/app/services/: agent_service.py  langchain_service.py  openai_service.py  rag_service.py
backend/app/utils/: exceptions.py
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css
client/src/components/: AIPlaceholderPanel.jsx  ModeToggle.jsx  Navbar.jsx  ProjectCard.jsx  ProjectPageLayout.jsx
client/src/components/ui/: button.jsx  dropdown-menu.jsx  input.jsx  tabs.jsx  textarea.jsx
client/src/data/: projects.js
client/src/pages/: AgentPage.jsx  EmbeddingsPage.jsx  HomePage.jsx  RagPage.jsx  TextToImagePage.jsx  ToolAgentPage.jsx
