[project]
name = "backend"
version = "0.1.0"
description = "Production-grade backend API for AI Projects Portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.54.0",
    "langchain-openai>=0.3.35",
    "python-dotenv>=1.2.1",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "isort>=6.1.0",
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
